fix: <q> technique was breaking some rendered markdown due to wrapping double quotes inside generated html tags with <p> tags

--- a/web/pages/Chat/components/Message.css
+++ b/web/pages/Chat/components/Message.css
@@ -13,6 +13,10 @@ em {
   color: var(--text-quote-color);
 }
 
+.rendered-markdown img {
+  display: inline-block; /* markdown images are expected to be inline-block */
+}
+
 .rendered-markdown q::before,
 .rendered-markdown q::after {
   content: '';
